--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scripts": "^3.0.1",
+    "react-xarrows": "^2.0.2",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "web-vitals": "^4.2.4"
