--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "risk-portfolio-mgr",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tarunkurma.github.io/risk-portfolio-mgr-thd",
   "dependencies": {
     "cra-template-pwa": "2.0.0",
     "react": "^19.1.0",
@@ -20,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix"
+    "lint:fix": "eslint src/**/*.js --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     "@testing-library/react": "^16.3.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "gh-pages": "^6.3.0"
   }
 }
