--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "homepage": "https://tarunkurma.github.io/risk-portfolio-mgr-thd",
   "dependencies": {
+    "axios": "^1.11.0",
     "cra-template-pwa": "2.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^3.0.1",
     "react-xarrows": "^2.0.2",
     "recharts": "^2.15.4",
     "styled-components": "^6.1.19",
+    "uuid": "^11.1.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
