--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
     
     steps:
     - name: 📥 Checkout code
@@ -26,7 +26,7 @@ jobs:
     
     - name: 📦 Install dependencies
       run: |
-        # Clean install with legacy peer deps to handle old react-scripts version
+        # Clean install with legacy peer deps, fallback to regular install if lock file issues
         npm ci --legacy-peer-deps || npm install --legacy-peer-deps
     
     - name: 🔍 Run linting
