Switch from npm to yarn for improved CI reliability
- Replace npm ci with yarn install --frozen-lockfile
- Update all build commands to use yarn (test, build)
- Add yarn.lock file for deterministic dependency resolution
- Enable yarn caching in GitHub Actions for faster builds
- Resolves npm ci authentication and compatibility issues

Benefits:
- Better error handling and dependency resolution
- Faster installs with improved caching
- More reliable CI builds
- Consistent lockfile format

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          cache: 'yarn'
 
-      - name: 📦 Install dependencies
-        run: npm ci
+      - name: 📦 Install dependencies with yarn
+        run: |
+          npm install -g yarn
+          yarn install --frozen-lockfile
 
       - name: 🧪 Run tests
-        run: npm test -- --coverage --watchAll=false
+        run: yarn test --coverage --watchAll=false
 
       - name: 🔧 Configure environment variables
         run: |
@@ -43,7 +45,7 @@ jobs:
           echo "REACT_APP_AI_FEATURES_ENABLED=true" >> $GITHUB_ENV
 
       - name: 🏗️ Build application
-        run: npm run build
+        run: yarn build
         env:
           REACT_APP_CLAUDE_API_KEY: ${{ secrets.CLAUDE_API_KEY }}
           REACT_APP_AI_FEATURES_ENABLED: true
