Transform terminology from 'Software Lifecycle Maturity Assessment' to 'Capability Maturity Assessment'
- Update main application title in Homepage.js
- Update README.md title to 'Comprehensive Capability Maturity Dashboard'
- Update HTML page title and meta description for SEO consistency
- Update PWA manifest.json app names for capability maturity branding
- Update MaturityDashboard.js labels for consistency
- Update DeployPage.js DevOps reference to capability maturity terminology
- Fix all test files to expect new terminology (App.test.js, Homepage.test.js, MaturityDashboard.test.js)
- Rewrite DevelopPage.test.js to reflect current assessment structure
- All 38 tests passing with no functionality regressions
- Complete rebrand maintains professional consistency across entire application

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Maturity Portfolio Manager",
-  "name": "Maturity Portfolio Manager - Stable Kernel",
+  "short_name": "Capability Maturity Manager",
+  "name": "Capability Maturity Manager - Stable Kernel",
   "icons": [
     {
       "src": "sk-logo.png",
