--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Maturity Portfolio Manager",
-  "name": "Maturity Portfolio Manager - Stable Kernel",
+  "short_name": "Capability Maturity Manager",
+  "name": "Capability Maturity Manager - Stable Kernel",
   "icons": [
     {
       "src": "sk-logo.png",
